--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
-    <title>تنبيه من التصيد الأحتيالي </title>
+    <title>Phishing Detector</title>
 
     <style>
         body {
             font-family: Arial;
             direction: rtl;
             text-align: center;
-            background-color: #a6c2f7;
-            padding-top: 50px;
+            background-color: #f4f4f4;
+            padding-top: 40px;
         }
 
-        input {
-            width: 320px;
-            padding: 10px;
+        textarea {
+            width: 380px;
+            padding: 12px;
             font-size: 16px;
         }
 
         button {
-            padding: 10px 25px;
-            font-size: 16px;
             margin-top: 15px;
+            padding: 10px 30px;
+            font-size: 16px;
             cursor: pointer;
         }
 
@@ -36,47 +36,84 @@
 
 <body>
 
-    <h2>🔍 تنبيه من التصيد الأحتيالي  </h2>
+    <h2>🔍 فحص الرسائل والروابط الاحتيالية</h2>
 
-    <!-- الإدخال -->
-    <input type="text" id="urlInput" placeholder="أدخل الرسالة هنا">
+    <textarea id="textInput"
+        placeholder="أدخل الرابط أو نص الرسالة (بدون حد لعدد الكلمات)"
+        rows="7"
+        aria-label="حقل إدخال نص الرسالة أو الرابط"></textarea>
 
     <br>
 
-    <button onclick="checkURL()">فحص الرسالة</button>
+    <button onclick="checkText()"
+        aria-label="زر فحص الرسالة أو الرابط">فحص</button>
 
-    <!-- الإخراج -->
-    <div id="result"></div>
+    <div id="result" aria-live="assertive"></div>
 
-    <!-- كود الجافاسكربت مع الصوت -->
- <script>
-    function speak(text) {
-        var msg = new SpeechSynthesisUtterance();
-        msg.text = text;
-        msg.lang = "ar-SA";
-        window.speechSynthesis.speak(msg);
-    }
+    <script>
+        /* 🔐 الكلمات المشبوهة داخل الكود */
+        const suspiciousWords = [
+            // عربي
+            "عاجل", "هام", "تم إيقاف", "حسابك", "تحقق", "تأكيد",
+            "جائزة", "ربحت", "سحب", "تحويل",
+            "اضغط هنا", "رمز التحقق", "دعم", "خدمة العملاء",
 
-    function checkURL() {
-        var url = document.getElementById("urlInput").value;
-        var result = document.getElementById("result");
+            // English
+            "urgent", "important", "account", "suspended",
+            "verify", "login", "update",
+            "click here", "free", "win", "prize",
+            "security", "alert"
+        ];
 
-        if (
-            url.includes("http") ||
-            url.includes("تحقق من حسابك") ||
-            url.includes("كلمة مرور") ||
-            url.includes("login")
-        ) {
-            result.innerHTML = "⚠️ تحذير، الرسالة مشبوهة";
-            result.style.color = "red";
-            speak("تحذير، الرسالة مشبوهة");
-        } 
-        else {
-            result.innerHTML = "✅ الرسالة آمنة";
-            result.style.color = "green";
-            speak("الرسالة آمنة");
+        function speak(text) {
+            const msg = new SpeechSynthesisUtterance(text);
+            msg.lang = "ar-SA";
+            window.speechSynthesis.speak(msg);
         }
-    }
-</script>
+
+        function checkText() {
+            const text = document.getElementById("textInput").value.toLowerCase();
+            const result = document.getElementById("result");
+            let risk = 0;
+
+            // فحص الكلمات المشبوهة
+            suspiciousWords.forEach(word => {
+                if (text.includes(word.toLowerCase())) {
+                    risk++;
+                }
+            });
+
+            // روابط مختصرة
+            if (text.includes("bit.ly")⠟⠵⠟⠟⠵⠞⠞⠺⠟⠟⠞⠞⠞⠟⠵⠞⠞⠞⠞⠟⠞⠵⠟⠺⠺⠞⠞⠞text.includes("t.co")) {
+                risk += 2;
+            }
+
+            // http بدون https
+            if (text.includes("http://")) risk += 2;
+
+            // عنوان IP بدل دومين
+            if (text.match(/\b\d{1,3}(\.\d{1,3}){3}\b/)) risk += 2;
+
+            // وجود @ داخل الرابط
+            if (text.includes("@")) risk += 1;
+
+            // النتيجة + الصوت
+            if (risk >= 6) {
+                result.innerHTML = "🚨 خطر عالي – رسالة احتيالية";
+                result.style.color = "red";
+                speak("تحذير شديد، هذه رسالة احتيالية");
+            } else if (risk >= 3) {
+                result.innerHTML = "⚠️ خطر متوسط – انتبه";
+                result.style.color = "orange";
+                speak("تنبيه، الرسالة قد تكون مشبوهة");
+            } else {
+                result.innerHTML = "✅ يبدو آمن";
+                result.style.color = "green";
+                speak("الرسالة تبدو آمنة");
+            }
+        }
+    </script>
+
 </body>
+</html>
 </html>
