--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-       <!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
@@ -8,23 +8,27 @@
 
 <style>
 body {
-    font-family: Arial;
+    font-family: Arial, sans-serif;
     direction: rtl;
     text-align: center;
     background: #f4f4f4;
     padding-top: 40px;
 }
+
 textarea {
     width: 380px;
+    max-width: 90%;
     padding: 12px;
     font-size: 16px;
 }
+
 button {
     margin-top: 15px;
     padding: 10px 30px;
     font-size: 16px;
     cursor: pointer;
 }
+
 #result {
     margin-top: 25px;
     font-size: 20px;
@@ -37,71 +41,100 @@ button {
 
 <h2>🔍 فحص الرسائل والروابط الاحتيالية</h2>
 
-<textarea id="textInput"
-    rows="7"
-    placeholder="أدخل الرسالة أو الرابط هنا (بدون حد)"
-    aria-label="حقل إدخال النص"></textarea>
+<textarea
+  id="textInput"
+  rows="7"
+  placeholder="أدخل الرسالة أو الرابط هنا">
+</textarea>
 
 <br>
 
 <button onclick="checkText()">🔍 فحص</button>
 
-<div id="result" aria-live="assertive"></div>
+<div id="result"></div>
 
 <script>
-/* الكلمات المشبوهة داخل الكود */
+// ================= الكلمات المشبوهة =================
 const suspiciousWords = [
-    "عاجل","هام","تم إيقاف","حسابك","تحقق","تأكيد",
-    "جائزة","ربحت","اضغط هنا","رمز التحقق","دعم",
-    "urgent","verify","account","login","free","win","prize"
+  // استعجال وتهديد
+  "عاجل","هام","تحذير","انذار","فوري","مهم",
+  "ايقاف","إيقاف","تعليق","حظر","موقوف","سيتم",
+  "انتهاء","تنتهي","آخر","فرصة",
+
+  // حسابات وأمان
+  "حساب","بيانات","معلومات","كلمة مرور","رمز",
+  "otp","pin","تحقق","تأكيد","تحديث","تسجيل",
+
+  // إغراءات
+  "جائزة","ربحت","فزت","سحب","هدية","مكافأة",
+  "مجاني","free","win","winner","prize","bonus",
+
+  // أوامر
+  "اضغط","انقر","ادخل","حدث","سجل","login",
+  "verify","confirm","update","access",
+
+  // جهات تُستغل
+  "بنك","مصرف","stc","paypal","amazon",
+  "apple","google","microsoft","netflix",
+  "aramex","smsa","dhl","ups","fedex"
 ];
 
-const shorteners = ["bit.ly","tinyurl","t.co","goo.gl"];
-
-function speak(text) {
-    const msg = new SpeechSynthesisUtterance(text);
-    msg.lang = "ar-SA";
-    window.speechSynthesis.speak(msg);
-}
+// ================= روابط مختصرة =================
+const shorteners = [
+  "bit.ly","tinyurl","t.co","goo.gl","is.gd",
+  "cutt.ly","rb.gy","ow.ly","shorturl.at"
+];
 
 function checkText() {
-    const text = document.getElementById("textInput").value.toLowerCase();
-    const result = document.getElementById("result");
-    let risk = 0;
+  const text = document.getElementById("textInput").value.toLowerCase();
+  const result = document.getElementById("result");
+  let risk = 0;
 
-    // فحص الكلمات
-    suspiciousWords.forEach(word => {
-        if (text.includes(word.toLowerCase())) risk++;
-    });
+  if (text.trim() === "") {
+    result.innerHTML = "⚠️ الرجاء إدخال نص";
+    result.style.color = "gray";
+    return;
+  }
 
-    // روابط مختصرة
-    shorteners.forEach(short => {
-        if (text.includes(short)) risk += 2;
-    });
+  // كلمات مشبوهة
+  suspiciousWords.forEach(word => {
+    if (text.includes(word)) risk += 1;
+  });
 
-    // http بدون https
-    if (text.includes("http://")) risk += 2;
+  // وجود أي رابط
+  if (text.match(/https?:\/\//)) risk += 2;
 
-    // IP بدل دومين
-    if (text.match(/\b\d{1,3}(\.\d{1,3}){3}\b/)) risk += 2;
+  // روابط مختصرة
+  shorteners.forEach(short => {
+    if (text.includes(short)) risk += 2;
+  });
 
-    // @ داخل الرابط
-    if (text.includes("@")) risk += 1;
+  // http بدون https
+  if (text.includes("http://")) risk += 2;
 
-    // النتيجة + الصوت
-    if (risk >= 6) {
-        result.innerHTML = "🚨 خطر عالي – رسالة احتيالية";
-        result.style.color = "red";
-        speak("تحذير شديد، هذه رسالة احتيالية");
-    } else if (risk >= 3) {
-        result.innerHTML = "⚠️ خطر متوسط – انتبه";
-        result.style.color = "orange";
-        speak("تنبيه، الرسالة قد تكون مشبوهة");
-    } else {
-        result.innerHTML = "✅ يبدو آمن";
-        result.style.color = "green";
-        speak("الرسالة تبدو آمنة");
-    }
+  // عنوان IP
+  if (text.match(/\b\d{1,3}(\.\d{1,3}){3}\b/)) risk += 2;
+
+  // www بدون https
+  if (text.includes("www.") && !text.includes("https://")) risk += 1;
+
+  // روابط فيها أرقام كثيرة
+  if (text.match(/[a-z]+\d{3,}/)) risk += 1;
+
+  // دومينات مقلدة
+  if (text.match(/paypa1|g00gle|micr0soft|app1e/)) risk += 3;
+
+  // ================= النتيجة =================
+  if (risk >= 7) {
+    result.innerHTML = "🚨 رسالة احتيالية (خطر عالي جدًا)";
+    result.style.color = "darkred";
+  } else if (risk >= 3) {
+    result.innerHTML = "⚠️ رسالة مشبوهة";
+    result.style.color = "orange";
+  } else {
+    result.innerHTML = "✅ تبدو آمنة";
+    result.style.color = "green";
+  }
 }
 </script>
 
