--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-    <!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
@@ -101,8 +101,10 @@ function checkText() {
     if (text.includes(word)) risk += 1;
   });
 
-  // وجود أي رابط
-  if (text.match(/https?:\/\//)) risk += 2;
+  // وجود رابط
+  const hasLink = text.match(/https?:\/\//);
+
+  if (hasLink) risk += 2;
 
   // روابط مختصرة
   shorteners.forEach(short => {
@@ -124,14 +126,28 @@ function checkText() {
   // دومينات مقلدة
   if (text.match(/paypa1|g00gle|micr0soft|app1e/)) risk += 3;
 
-  // ================= النتيجة =================
-  if (risk >= 7) {
-    result.innerHTML = "🚨 رسالة احتيالية (خطر عالي جدًا)";
+  // تهديد مباشر
+  const hasThreat =
+    text.includes("ايقاف") ||
+    text.includes("إيقاف") ||
+    text.includes("تحذير") ||
+    text.includes("عاجل") ||
+    text.includes("حظر");
+
+  // ================= النتيجة النهائية =================
+  if (hasLink && hasThreat) {
+    result.innerHTML = "🚨 رسالة احتيالية (خطر عالي)";
+    result.style.color = "red";
+  }
+  else if (risk >= 5) {
+    result.innerHTML = "🚨 رسالة احتيالية (خطر عالي)";
     result.style.color = "darkred";
-  } else if (risk >= 3) {
+  }
+  else if (risk >= 3) {
     result.innerHTML = "⚠️ رسالة مشبوهة";
     result.style.color = "orange";
-  } else {
+  }
+  else {
     result.innerHTML = "✅ تبدو آمنة";
     result.style.color = "green";
   }
