--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-  <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
@@ -41,48 +41,34 @@ button {
 
 <h2>🔍 فحص الرسائل والروابط الاحتيالية</h2>
 
-<textarea
-  id="textInput"
-  rows="7"
-  placeholder="أدخل الرسالة أو الرابط هنا">
-</textarea>
+<textarea id="textInput" rows="7"
+placeholder="أدخل الرسالة أو الرابط هنا"></textarea>
 
 <br>
-
 <button onclick="checkText()">🔍 فحص</button>
 
 <div id="result"></div>
 
 <script>
-// ================= الكلمات المشبوهة =================
+// ================= كلمات خطيرة جدًا =================
+const criticalWords = [
+  "ايقاف","إيقاف","حظر","تعليق","موقوف",
+  "تحذير","عاجل","انذار","سيتم ايقاف",
+  "حدث بياناتك","اضغط","سجل","login","verify"
+];
+
+// ================= كلمات مشبوهة =================
 const suspiciousWords = [
-  // استعجال وتهديد
-  "عاجل","هام","تحذير","انذار","فوري","مهم",
-  "ايقاف","إيقاف","تعليق","حظر","موقوف","سيتم",
-  "انتهاء","تنتهي","آخر","فرصة",
-
-  // حسابات وأمان
-  "حساب","بيانات","معلومات","كلمة مرور","رمز",
-  "otp","pin","تحقق","تأكيد","تحديث","تسجيل",
-
-  // إغراءات
-  "جائزة","ربحت","فزت","سحب","هدية","مكافأة",
-  "مجاني","free","win","winner","prize","bonus",
-
-  // أوامر
-  "اضغط","انقر","ادخل","حدث","سجل","login",
-  "verify","confirm","update","access",
-
-  // جهات تُستغل
-  "بنك","مصرف","stc","paypal","amazon",
-  "apple","google","microsoft","netflix",
-  "aramex","smsa","dhl","ups","fedex"
+  "حساب","بيانات","رمز","otp","pin","تأكيد",
+  "تحديث","جائزة","ربحت","هدية","free","win",
+  "paypal","stc","amazon","apple","google",
+  "microsoft","netflix","بنك","مصرف"
 ];
 
 // ================= روابط مختصرة =================
 const shorteners = [
-  "bit.ly","tinyurl","t.co","goo.gl","is.gd",
-  "cutt.ly","rb.gy","ow.ly","shorturl.at"
+  "bit.ly","tinyurl","t.co","goo.gl",
+  "cutt.ly","rb.gy","ow.ly"
 ];
 
 function checkText() {
@@ -96,15 +82,16 @@ function checkText() {
     return;
   }
 
+  // هل يوجد رابط؟
+  const hasLink = /https?:\/\//.test(text) || text.includes("www.");
+
+  // كلمات خطيرة
+  let hasCritical = criticalWords.some(word => text.includes(word));
+
   // كلمات مشبوهة
   suspiciousWords.forEach(word => {
     if (text.includes(word)) risk += 1;
   });
-
-  // وجود رابط
-  const hasLink = text.match(/https?:\/\//);
-
-  if (hasLink) risk += 2;
 
   // روابط مختصرة
   shorteners.forEach(short => {
@@ -114,36 +101,27 @@ function checkText() {
   // http بدون https
   if (text.includes("http://")) risk += 2;
 
-  // عنوان IP
+  // IP
   if (text.match(/\b\d{1,3}(\.\d{1,3}){3}\b/)) risk += 2;
 
-  // www بدون https
-  if (text.includes("www.") && !text.includes("https://")) risk += 1;
-
-  // روابط فيها أرقام كثيرة
-  if (text.match(/[a-z]+\d{3,}/)) risk += 1;
-
-  // دومينات مقلدة
+  // دومين مقلد
   if (text.match(/paypa1|g00gle|micr0soft|app1e/)) risk += 3;
 
-  // تهديد مباشر
-  const hasThreat =
-    text.includes("ايقاف") ||
-    text.includes("إيقاف") ||
-    text.includes("تحذير") ||
-    text.includes("عاجل") ||
-    text.includes("حظر");
+  // ================= القرار النهائي =================
 
-  // ================= النتيجة النهائية =================
-  if (hasLink && hasThreat) {
+  // 🔴 قاعدة قاطعة
+  if (hasLink && hasCritical) {
+    result.innerHTML = "🚨 رسالة احتيالية (خطر عالي جدًا)";
+    result.style.color = "darkred";
+    return;
+  }
+
+  // 🔴 خطر عالي بالنقاط
+  if (risk >= 4) {
     result.innerHTML = "🚨 رسالة احتيالية (خطر عالي)";
     result.style.color = "red";
   }
-  else if (risk >= 5) {
-    result.innerHTML = "🚨 رسالة احتيالية (خطر عالي)";
-    result.style.color = "darkred";
-  }
-  else if (risk >= 3) {
+  else if (risk >= 2) {
     result.innerHTML = "⚠️ رسالة مشبوهة";
     result.style.color = "orange";
   }
