--- a/index.html
+++ b/index.html
@@ -3,186 +3,203 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>Phishing Detector</title>
+<title>Cyber Phishing Analyzer</title>
 
 <style>
-body {
-    font-family: Arial, sans-serif;
-    direction: rtl;
-    text-align: center;
-    background: #f4f4f4;
-    padding-top: 40px;
+:root {
+  --bg: #0f172a;
+  --card: #020617;
+  --primary: #38bdf8;
+  --danger: #ef4444;
+  --warning: #f59e0b;
+  --safe: #22c55e;
+  --text: #e5e7eb;
+  --muted: #94a3b8;
 }
 
+body {
+  margin: 0;
+  font-family: "Segoe UI", Tahoma, sans-serif;
+  background: radial-gradient(circle at top, #020617, #0f172a);
+  color: var(--text);
+  direction: rtl;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* ===== Card ===== */
+.card {
+  background: linear-gradient(180deg, #020617, #020617);
+  border: 1px solid #1e293b;
+  border-radius: 16px;
+  width: 420px;
+  max-width: 95%;
+  padding: 30px;
+  box-shadow: 0 0 30px rgba(56,189,248,0.15);
+}
+
+/* ===== Header ===== */
+.header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.header h1 {
+  margin: 0;
+  font-size: 22px;
+  color: var(--primary);
+}
+
+.header p {
+  font-size: 13px;
+  color: var(--muted);
+}
+
+/* ===== Input ===== */
 textarea {
-    width: 380px;
-    max-width: 90%;
-    padding: 12px;
-    font-size: 16px;
+  width: 100%;
+  background: #020617;
+  border: 1px solid #1e293b;
+  border-radius: 10px;
+  padding: 14px;
+  color: var(--text);
+  font-size: 15px;
+  resize: none;
+}
+
+textarea::placeholder {
+  color: #64748b;
+}
+
+/* ===== Buttons ===== */
+.buttons {
+  display: flex;
+  gap: 10px;
+  margin-top: 15px;
 }
 
 button {
-    margin-top: 15px;
-    padding: 10px 25px;
-    font-size: 16px;
-    cursor: pointer;
+  flex: 1;
+  background: #020617;
+  border: 1px solid var(--primary);
+  color: var(--primary);
+  padding: 12px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: 0.2s;
 }
 
+button:hover {
+  background: var(--primary);
+  color: #020617;
+}
+
+/* ===== Result ===== */
 #result {
-    margin-top: 25px;
-    font-size: 20px;
-    font-weight: bold;
+  margin-top: 25px;
+  padding: 14px;
+  border-radius: 10px;
+  font-weight: bold;
+  text-align: center;
 }
 
+.safe { background: rgba(34,197,94,0.15); color: var(--safe); }
+.warn { background: rgba(245,158,11,0.15); color: var(--warning); }
+.danger { background: rgba(239,68,68,0.15); color: var(--danger); }
+
+/* ===== MITRE ===== */
 #mitre {
-    margin-top: 15px;
-    font-size: 14px;
-    color: #333;
+  margin-top: 15px;
+  font-size: 13px;
+  color: var(--muted);
+  line-height: 1.6;
 }
 </style>
 </head>
 
 <body>
 
-<h2 id="title">🔍 فحص الرسائل والروابط الاحتيالية</h2>
+<div class="card">
 
-<textarea
-  id="textInput"
-  rows="7"
-  placeholder="أدخل الرسالة أو الرابط هنا"
-></textarea>
+  <div class="header">
+    <h1>Cyber Phishing Analyzer</h1>
+    <p>تحليل رسائل وروابط احتيالية باستخدام MITRE ATT&CK</p>
+  </div>
 
-<br>
-<button id="scanBtn">🔍 فحص</button>
-<button id="voiceBtn">🔊 تفعيل المساعد الصوتي</button>
+  <textarea id="textInput" rows="6"
+    placeholder="أدخل الرسالة أو الرابط المشكوك فيه هنا"></textarea>
 
-<div id="result"></div>
-<div id="mitre"></div>
+  <div class="buttons">
+    <button id="scanBtn">🔍 تحليل</button>
+    <button id="voiceBtn">🔊 تفعيل الصوت</button>
+  </div>
+
+  <div id="result"></div>
+  <div id="mitre"></div>
+
+</div>
 
 <script>
-// ================= إعداد الصوت =================
+// ===== الصوت =====
 let voiceEnabled = false;
-
-function speak(text) {
-  if (!voiceEnabled) return;
-  window.speechSynthesis.cancel();
+function speak(text){
+  if(!voiceEnabled) return;
   const msg = new SpeechSynthesisUtterance(text);
-  msg.lang = "ar-SA";
-  msg.rate = 1;
-  window.speechSynthesis.speak(msg);
+  msg.lang="ar-SA";
+  speechSynthesis.speak(msg);
 }
 
-// ===== زر تفعيل الصوت (لازم ضغط) =====
-document.getElementById("voiceBtn").addEventListener("click", () => {
-  voiceEnabled = true;
-  const msg = new SpeechSynthesisUtterance("تم تفعيل المساعد الصوتي");
-  msg.lang = "ar-SA";
-  window.speechSynthesis.speak(msg);
-});
+voiceBtn.onclick=()=>{
+  voiceEnabled=true;
+  speak("تم تفعيل المساعد الصوتي");
+};
 
-// ================= نطق عند المرور =================
-const input = document.getElementById("textInput");
-const title = document.getElementById("title");
-const scanBtn = document.getElementById("scanBtn");
+// ===== كلمات =====
+const critical=["ايقاف","موقوف","تحذير","verify","login"];
+const suspicious=["otp","رمز","تحديث","session","token","account","حساب"];
 
-title.addEventListener("mouseenter", () =>
-  speak("عنوان الصفحة فحص الرسائل والروابط الاحتيالية")
-);
-
-input.addEventListener("mouseenter", () =>
-  speak("مربع إدخال الرسالة أو الرابط")
-);
-
-input.addEventListener("focus", () =>
-  speak("أنت الآن داخل مربع إدخال النص")
-);
-
-scanBtn.addEventListener("mouseenter", () =>
-  speak("زر فحص الرسالة")
-);
-
-// ================= كلمات خطيرة =================
-const criticalWords = [
-  "إيقاف","ايقاف","حسابك موقوف","تعليق",
-  "تحذير","عاجل","انذار","تم اختراق",
-  "verify","login","confirm","suspended"
+const mitre=[
+  {k:["login","تسجيل"],id:"T1566.002"},
+  {k:["otp","رمز"],id:"T1556"},
+  {k:["session","جلسة"],id:"T1539"},
+  {k:["موقوف"],id:"T1098"}
 ];
 
-// ================= كلمات مشبوهة متقدمة =================
-const suspiciousWords = [
-  "تحديث بياناتك","رمز التحقق","otp","token",
-  "session","انتهت الجلسة","api key","password",
-  "بيانات الدخول","support","دعم فني",
-  "unusual activity","نشاط غير معتاد",
-  "secure","account","حساب","bank","بنك"
-];
+scanBtn.onclick=()=>{
+  const text=textInput.value.toLowerCase();
+  let risk=0,found=[];
 
-// ================= MITRE ATT&CK =================
-const mitreMap = [
-  { k:["login","تسجيل الدخول"], id:"T1566.002", tactic:"Initial Access" },
-  { k:["verify","تحقق","تأكيد"], id:"T1566.002", tactic:"Initial Access" },
-  { k:["otp","رمز التحقق","token"], id:"T1556", tactic:"Credential Access" },
-  { k:["session","انتهت الجلسة"], id:"T1539", tactic:"Credential Access" },
-  { k:["حسابك موقوف","account suspended"], id:"T1098", tactic:"Persistence" }
-];
-
-// ================= زر الفحص =================
-document.getElementById("scanBtn").addEventListener("click", checkText);
-
-function checkText() {
-  const text = document.getElementById("textInput").value.toLowerCase();
-  const result = document.getElementById("result");
-  const mitreDiv = document.getElementById("mitre");
-
-  let risk = 0;
-  let found = [];
-
-  if (!text.trim()) {
-    result.innerHTML = "⚠️ الرجاء إدخال نص";
-    result.style.color = "gray";
-    speak("الرجاء إدخال نص");
-    return;
-  }
-
-  const hasLink =
-    /https?:\/\//.test(text) || text.includes("www.");
-  const hasCritical =
-    criticalWords.some(w => text.includes(w));
-
-  suspiciousWords.forEach(w => {
-    if (text.includes(w)) risk++;
+  critical.forEach(w=>{if(text.includes(w)) risk+=2});
+  suspicious.forEach(w=>{if(text.includes(w)) risk+=1});
+  mitre.forEach(m=>{
+    m.k.forEach(w=>{
+      if(text.includes(w)){found.push(m.id); risk+=2}
+    })
   });
 
-  mitreMap.forEach(m => {
-    m.k.forEach(word => {
-      if (text.includes(word)) {
-        found.push(m.id);
-        risk += 2;
-      }
-    });
-  });
-
-  if ((hasLink && hasCritical) || risk >= 4) {
-    result.innerHTML = "🚨 رسالة احتيالية (خطر عالي)";
-    result.style.color = "red";
+  if(risk>=4){
+    result.className="danger";
+    result.innerText="🚨 رسالة احتيالية – خطر عالي";
     speak("تحذير رسالة احتيالية خطر عالي");
-  }
-  else if (risk >= 2) {
-    result.innerHTML = "⚠️ رسالة مشبوهة";
-    result.style.color = "orange";
+  }else if(risk>=2){
+    result.className="warn";
+    result.innerText="⚠️ رسالة مشبوهة";
     speak("تنبيه رسالة مشبوهة");
-  }
-  else {
-    result.innerHTML = "✅ تبدو آمنة";
-    result.style.color = "green";
+  }else{
+    result.className="safe";
+    result.innerText="✅ الرسالة تبدو آمنة";
     speak("الرسالة تبدو آمنة");
   }
 
-  mitreDiv.innerHTML = found.length
-    ? "<b>MITRE ATT&CK:</b> " + [...new Set(found)].join(", ")
+  mitreDiv=document.getElementById("mitre");
+  mitreDiv.innerHTML=found.length
+    ? "<b>MITRE ATT&CK:</b><br>"+[...new Set(found)].join(", ")
     : "";
-}
+};
 </script>
 
 </body>
-</html>
+</html
